--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,8 @@
 @import './base/typography';
 @import './base/home';
 @import './base/reset';
+
+.travelcompany-input {
+    width: 500px;
+    text-align: center;
+}
