--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,9 @@
 @import './base/typography';
 @import './base/home';
 @import './base/reset';
+@import './components/homepage';
 
-.travelcompany-input {
+.animelist--input {
     width: 500px;
     text-align: center;
 }
