--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import './base/home';
 @import './base/reset';
 @import './components/homepage';
+@import './components/sharelink';
 
 .animelist--input {
     width: 500px;
