design anime card page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/reset';
 @import './components/homepage';
 @import './components/sharelink';
+@import './components/room';
 
 .animelist--input {
     width: 500px;
