push users to waiting room as other users need to finish selecting anime. need to account for visitors

--- a/src/sass/components/room.scss
+++ b/src/sass/components/room.scss
@@ -8,6 +8,11 @@
     align-items: center;
     gap: 2rem;
 
+    &--title {
+        font-size: 4rem;
+        color: #274C77;
+    }
+
     &--content {
         border: .4rem solid black;
         width: 32rem;
