abstracted card. utilized new card component for roommatch. updated sass to account for these changes.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/homepage';
 @import './components/sharelink';
 @import './components/room';
+@import './components/card';
 
 .animelist--input {
     width: 500px;
