--- a/src/sass/components/room.scss
+++ b/src/sass/components/room.scss
@@ -1,44 +1,11 @@
 @import '../utils/variables';
-
-.card{
+.room {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    height: 95%;
     align-items: center;
-    gap: 2rem;
-
-    &--title {
-        font-size: 4rem;
-        color: #274C77;
-    }
-
-    &--content {
-        border: .4rem solid black;
-        width: 32rem;
-        height: 54rem;
-
-        &-ul {
-            list-style-type: none;
-            padding: 1rem;
-        }
-
-        &-image {
-            width: 32rem;
-            height: 40.8rem;
-            object-fit: fill;
-        }
-
-        &-title {
-            font-size: 3rem;
-            color: #274C77;
-        }
-        &-rating {
-            font-size: 2rem;
-            color: #274C77;
-        }
-    }
-
+    gap: 1.5rem;
+    
     &--buttons {
         display: flex;
         gap: 4rem;
@@ -62,4 +29,3 @@
         }
     }
 }
-
