abstract title. implement design for match found and waiting room.

--- a/src/sass/components/room.scss
+++ b/src/sass/components/room.scss
@@ -6,6 +6,11 @@
     align-items: center;
     gap: 1.5rem;
     
+    &--title {
+        font-size: 4rem;
+        color: #274C77;
+    }
+    
     &--buttons {
         display: flex;
         gap: 4rem;
