--- a/src/sass/components/sharelink.scss
+++ b/src/sass/components/sharelink.scss
@@ -7,7 +7,16 @@
   align-items: center;
   justify-content: center;
   gap: 4rem;
-  background-color: #FBF7F4;
+
+  &--title {
+    font-size: 8rem;
+    color: #274C77;
+  }
+
+  &--subtitle {
+    font-size: 3rem;
+    color: #e75a7c;
+  }
 
   &--button {
     font-size: 2.5rem;
