--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -19,7 +19,7 @@
     &--content {
         border: .4rem solid black;
         width: 32rem;
-        height: 54rem;
+        max-height: 58rem;
 
         &-ul {
             list-style-type: none;
@@ -33,8 +33,15 @@
         }
 
         &-title {
+            width: 30rem;
+            white-space: nowrap;
             font-size: 3rem;
             color: #274C77;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            &:hover {
+                white-space: normal;
+            }
         }
         &-rating {
             font-size: 2rem;
