--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,8 @@
 @import './components/room';
 @import './components/card';
 @import './components/waitingroom';
-@import './components/matchedAnime';
+@import './components/matchedanime';
+@import './components/matchfailed';
 
 .animelist--input {
     width: 500px;
